# QueryVectorBuilder

./: .gitmodules  CMakeLists.txt
data/: walking.bvh
src/: bvh_reader.cxx  data_structures.cxx  query_builder.cpp
